Prepare initial deplyment

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.5.2
 certifi==2025.7.9
 charset-normalizer==3.4.2
 click==8.2.1
+Deprecated==1.2.18
 deprecation==2.1.0
 distro==1.9.0
 dnspython==2.7.0
@@ -82,3 +83,4 @@ uvicorn==0.35.0
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
+wrapt==1.17.2
